@@ -23,7 +23,7 @@ New Breed Software</p>
 <a href="http://www.tuxpaint.org/">http://www.tuxpaint.org/</a></p>
 
 
-<p>October 14, 2007</p>
+<p>October 23, 2007</p>
 
 
 </center>
@@ -274,6 +274,25 @@ New Breed Software</p>
     flsa, flse,
     csheet, dsheet, esheet.
     </p>
+  </dd>
+
+  <dt><code><b>nolockfile=yes</b></code></dt>
+  <dd>
+    <p>By default, Tux&nbsp;Paint uses what's known as a 'lockfile'
+    to prevent it from being launched more than once in 30&nbsp;seconds.
+    (This is to avoid accidentally running multiple copies; for example,
+    by double-clicking a single-click launcher, or simply
+    impatiently clicking the icon multiple times.)</p>
+
+    <p>To make Tux&nbsp;Paint ignore the lockfile, allowing it to
+    run again, even if it was just launched less than 30&nbsp;seconds
+    ago, enable this setting in the configuration file, or
+    run Tux&nbsp;Paint with the '<code>--nolockfile</code>' option
+    on the command-line.</p>
+
+    <p>By default, the lockfile is stored in
+    "<code>~/.tuxpaint/</code>" under Linux and Unix,
+    and "<code>userdata\</code>" under Windows.</p>
   </dd>
 
   <dt><code><b>simpleshapes=yes</b></code></dt>
@@ -983,6 +1002,7 @@ New Breed Software</p>
     --altprintnever<br>
     --altprintalways<br>
     --papersize=<i>PAPERSIZE</i><br>
+    --nolockfile<br>
     --simpleshapes<br>
     --uppercase<br>
     --grab<br>
@@ -1023,6 +1043,7 @@ New Breed Software</p>
     --printdelay=0<br>
     --noprintcfg<br>
     --altprintmod<br>
+    --lockfile<br>
     --complexshapes<br>
     --mixedcase<br>
     --dontgrab<br>
@@ -1070,24 +1091,6 @@ New Breed Software</p>
 
       <p>Only your own configuration file, "<code>~/.tuxpaintrc</code>",
       if it exists, will be used.</p>
-    </dd>
-
-    <dt><code><b>--nolockfile</b></code></dt>
-    <dd>
-      <p>By default, Tux&nbsp;Paint uses what's known as a 'lockfile'
-      to prevent it from being launched more than once in 30&nbsp;seconds.
-      (This is to avoid accidentally running multiple copies; for example,
-      by double-clicking a single-click launcher, or simply
-      impatiently clicking the icon multiple times.)</p>
-
-      <p>To make Tux&nbsp;Paint ignore the lockfile, allowing it to
-      run again, even if it was just launched less than 30&nbsp;seconds
-      ago, run Tux&nbsp;Paint with the '<code>--nolockfile</code>' option
-      on the command-line.</p>
-
-      <p>By default, the lockfile is stored in
-      "<code>~/.tuxpaint/</code>" under Linux and Unix,
-      and "<code>userdata\</code>" under Windows.</p>
     </dd>
   </dl>
   </blockquote>
